# roboracing-software

./: .gitignore  road_histogram_hue_normalized.yml  stable_release.txt
avc/: CMakeLists.txt
avc/src/road_detector/: road_detector.cpp
avc/src/road_detector_histogramTrainer/: road_detector_histogramTrainer.cpp
avc/src/svm/: CMakeLists.txt  color_svm_avc.cpp  svm.cpp  svm.xml
devel/lib/avc/: color_detector_avc  histogram  image_transform  planner  road_detector  road_detector_histogramTrainer  trigger_calibration
devel/lib/iarrc/: color_detector_circuit  color_detector_dragrace  speed_controller  steerer_circuit  steerer_dragrace
devel/lib/rr_platform/: joystick  motor_relay_node
devel/share/avc/cmake/: avcConfig.cmake
devel/share/iarrc/cmake/: iarrcConfig.cmake
devel/share/rr_platform/cmake/: rr_platformConfig.cmake
devel/share/sandbox/cmake/: sandboxConfig.cmake
rr_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rr_rviz_plugins/src/CompassPanel/: CompassPanel.cpp  CompassPanel.h  CompassWidget.cpp  CompassWidget.h
